Fix: type mismatch in extractTables() - add missing 'title' property; harden truncate/escapeXml against undefined
- extractTables() now returns { title, headers, rows } matching ConceptData
- truncate() and escapeXml() in utils.ts safely handle undefined input
- Regenerated 8,195 SVGs + 6,696 WebP across 745 chapters, 53 courses